tests/fixtures/invalid/oct_none.py
# Cannot call oct() with None
x = oct(None)
